# flopmetrics

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  install.sh  pyproject.toml
experiments/architecture/: README.md  analysis_optimized.ipynb  process_optimized.py
experiments/architecture/results_baseline/: a100-40g_fp32_llama3.2_1b_energy_results.jsonl  a40_fp32_llama3.2_1b_energy_results.jsonl  gpu_time_combined.csv
experiments/architecture/results_optimized/: a100_bf16_llama3.2_1b_all_configs_results.jsonl  a100_bf16_llama3.2_1b_mid_result.jsonl  a100_bf16_llama3.2_1b_small_result.jsonl  a100_fp16_llama3.2_1b_large_result.jsonl  a100_fp16_llama3.2_1b_mid_result.jsonl  a100_fp32_llama3.2_1b_large_result.jsonl  a100_fp32_llama3.2_1b_mid_result.jsonl  a100_fp32_llama3.2_1b_small_result.jsonl  a40_bf16_llama3.2_1b_all_configs_results.jsonl  a40_bf16_llama3.2_1b_mid_result.jsonl  a40_bf16_llama3.2_1b_small_result.jsonl  a40_fp16_llama3.2_1b_mid_result.jsonl  (+30 more)
experiments/infrastructure/: README.md  analysis.ipynb  analysis_baseline.ipynb  analysis_optimized.ipynb  analyze_efficiency.py  analyze_optimized.py  profile.py  profile_baseline.py  profile_optimized.py  profile_ultra_optimized.py
experiments/metrics/: README.md  analysis.ipynb  hyper_profile.py  mlp.ipynb  toy_network.ipynb
flopmetrics/: evaluation.py  model.py  multiprocessing.py  ncu.py  network.py  profiler.py
metriwatt/: evaluation.py  multiprocessing.py  ncu.py  network.py  profiler.py
src/: evaluations.py  model.py  multiprocessing.py  ncu.py  profiler.py  util.py
(+4039 files in other folders)
