[tool.poetry]
name = "metriwatt"
version = "0.1.0"
description = "Infrastructures and Metrics for Assessing Energy-Efficient Large Language Model Training."
authors = ["Jannis Metrikat <120120832+jmetrikat@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.6.0"
transformers = {extras = ["torch"], version = "^4.49.0"}
datasets = "^3.3.2"
python-dotenv = "^1.0.1"
evaluate = "^0.4.3"
scikit-learn = "^1.6.1"
lm-eval = {path = "./external/lm-eval", develop = true}
plotly = "^6.0.0"
huggingface-hub = {extras = ["cli"], version = "^0.29.1"}
tqdm = "^4.67.1"
nbformat = "^5.10.4"
peft = "^0.15.1"
matplotlib = "^3.10.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
